<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal"
    android:orientation="vertical"
   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="3">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="100dp"
            android:layout_weight="1"
            android:background="@color/White"
            android:gravity="center"
            android:hint="@string/editText"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:text="">

        </EditText>


        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@color/White"
            android:gravity="center"
            android:hint="@string/editText2"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text=""
            >

        </EditText>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/button"
            android:textColor="@color/teal"
           >

        </Button>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="horizontal"
           android:layout_marginTop="20dp"
           android:weightSum="2">


           <TextView
               android:id="@+id/text1"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/text1"
               android:layout_weight="1"
               android:textColor="@color/White"
               android:gravity="center"
               android:layout_marginLeft="80dp"
               />

           <TextView
               android:id="@+id/text2"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_marginRight="80dp"
               android:layout_weight="1"

               android:gravity="center"
               android:text="@string/text2"
               android:textColor="@color/White" />


       </LinearLayout>


    </LinearLayout>
</LinearLayout>